--- a/package.json
+++ b/package.json
@@ -20,12 +20,17 @@
     "@radix-ui/react-switch": "^1.1.0",
     "@radix-ui/react-toast": "^1.1.5",
     "@react-google-maps/api": "^2.19.3",
+    "@tiptap/extension-color": "^2.5.9",
+    "@tiptap/extension-text-style": "^2.5.9",
+    "@tiptap/react": "^2.5.9",
+    "@tiptap/starter-kit": "^2.5.9",
     "@types/js-cookie": "^3.0.6",
     "axios": "^1.7.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
     "framer-motion": "^11.3.24",
+    "html2canvas": "^1.4.1",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.391.0",
     "next": "14.2.3",
