--- a/package.json
+++ b/package.json
@@ -30,12 +30,14 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
+    "cropperjs": "^1.6.2",
     "framer-motion": "^11.3.24",
     "html2canvas": "^1.4.1",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.391.0",
     "next": "14.2.3",
     "react": "^18",
+    "react-cropper": "^2.3.3",
     "react-dom": "^18",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
